ban e follow implementati nel frontend
