# doc/api.yaml
@@ -509,6 +509,45 @@ paths:
           $ref: '#/components/responses/UnfollowUser'
         "401":
           $ref: '#/components/responses/UnauthorizedError'
+    get:
+      security:
+        - bearerAuth: []
+      tags: ["follows"]
+      description: Verifica se un utente segue un altro utente.
+      summary: Check if user is followed
+      operationId: getIsFollowed
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: ID dell'utente che effettua la verifica.
+          schema:
+            type: string
+        - name: followedId
+          in: path
+          required: true
+          description: ID dell'utente che si vuole verificare se è seguito.
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successo. Restituisce true se l'utente è seguito, false altrimenti.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isFollowed:
+                    type: boolean
+                    description: Indica se l'utente è seguito.
+                    example: true
+        "401":
+          description: Non autorizzato. Il token JWT non è valido o mancante.
+        "404":
+          description: L'utente specificato non esiste o il ban non è presente.
+        "500":
+          description: Errore interno del server. Controlla i registri per ulteriori dettagli
+
 
   /users/{userId}/followers:
     parameters:
@@ -550,6 +589,44 @@ paths:
           
 #-------ban-------#
 
+  /users/{userId}/bans:
+    parameters:
+      - $ref: "#/components/parameters/userId"
+    get:
+      security:
+      - bearerAuth : []
+      tags: ["bans"]
+      description: get the list of bans
+      summary: retrieve list of bans for the user
+      operationId: getUserBans
+      responses:
+        "200": 
+          description: successfully retrieve bans list
+          content:
+            application/json: 
+              schema:
+                description: list of bans
+                type: object
+                properties:
+                  follows:
+                    description: list of bans
+                    type: array
+                    minItems: 0
+                    maxItems: 1000
+                    items:
+                      type: string
+              examples:
+                example:
+                  value:
+                    follows:
+                      - "123"
+                      - "1234"
+                      - "40"
+        "401": 
+          $ref: "#/components/responses/UnauthorizedError"
+        "404": 
+          $ref: "#/components/responses/UserNotFound"
+
   /users/{userId}/bans/{bannedId}:
     parameters:
       - $ref: '#/components/parameters/userId'
@@ -557,7 +634,7 @@ paths:
     post:
       security:
       - bearerAuth : []
-      tags: ["bans"]
+      tags: ["user"]
       description: allows to ban other accounts
       summary: ban another account
       operationId: banUser
@@ -578,6 +655,32 @@ paths:
           $ref: '#/components/responses/UnbanUser'
         "401":
           $ref: '#/components/responses/UnauthorizedError'
+    get:
+      security:
+        - bearerAuth : []
+      tags: ["bans"]
+      description: controlla se un account è bannato da un altro account
+      summary: check bans
+      operationId: getIsBanned
+      responses:
+        "200":
+          description: Successo. Restituisce true se l'utente è bannato, false altrimenti.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isBanned:
+                    type: boolean
+                    description: Indica se l'utente è bannato.
+                    example: true
+        "401":
+          description: Non autorizzato. Il token JWT non è valido o mancante.
+        "404":
+          description: L'utente specificato non esiste o il ban non è presente.
+        "500":
+          description: Errore interno del server. Controlla i registri per ulteriori dettagli
+
 components:
   securitySchemes:
     bearerAuth:            # arbitrary name for the security scheme
