# service/api/api-handler.go
@@ -39,11 +39,13 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/users/:userId/follows/:followedId", rt.wrap(rt.followUser))
 	rt.router.DELETE("/users/:userId/follows/:followedId", rt.wrap(rt.unfollowUser))
 	rt.router.GET("/users/:userId/followers", rt.wrap(rt.getUserFollowers))
+	rt.router.GET("/users/:userId/follows/:followedId", rt.wrap(rt.getIsFollowed))
 
 	// Ban routes
 	rt.router.GET("/users/:userId/bans", rt.wrap(rt.getUserBans))
 	rt.router.POST("/users/:userId/bans/:bannedId", rt.wrap(rt.banUser))
 	rt.router.DELETE("/users/:userId/bans/:bannedId", rt.wrap(rt.unbanUser))
+	rt.router.GET("/users/:userId/bans/:bannedId", rt.wrap(rt.getIsBanned))
 
 	return rt.router
 }
